--- a/app/src/main/res/layout/image_slider_product_details.xml
+++ b/app/src/main/res/layout/image_slider_product_details.xml
@@ -4,20 +4,18 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:duplicateParentState="true">
+    android:duplicateParentState="true"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardViewPrdDetails"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        app:cardCornerRadius="5dp"
+        android:duplicateParentState="true"
         android:elevation="30dp"
-        card_view:cardUseCompatPadding="true"
-        android:duplicateParentState="true">
-
-
+        app:cardCornerRadius="5dp"
+        card_view:cardUseCompatPadding="true">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager_PrdDetails"
@@ -28,21 +26,20 @@
             app:ci_height="10dp"
             app:ci_width="10dp" />
 
-
         <LinearLayout
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="top|right"
-            android:padding="10dp"
-            android:duplicateParentState="true">
+            android:duplicateParentState="true"
+            android:padding="10dp">
 
             <ImageButton
-                android:id="@+id/btn_addtoWishlistPrdDetail"
+                android:id="@+id/btnWishlist"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/addwishlist"
+                android:background="@drawable/wishlistgrey"
                 android:clickable="true"
-                android:duplicateParentState="true"/>
+                android:duplicateParentState="true" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
