--- a/app/src/main/res/layout/loyality_point_notes.xml
+++ b/app/src/main/res/layout/loyality_point_notes.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="50dp">
-
-<WebView
-    android:id="@+id/webViewNotes"
-    android:textColor="@color/light_black_1"
-    android:text="some text some text some text"
-    android:textSize="6sp"
-    android:textAllCaps="false"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="50dp">
+
+    <WebView
+        android:id="@+id/webViewNotes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="some text some text some text"
+        android:textAllCaps="false"
+        android:textColor="@color/light_black_1"
+        android:textSize="4sp" />
 
 </FrameLayout>
