--- a/app/src/main/res/layout/my_wallet_activity.xml
+++ b/app/src/main/res/layout/my_wallet_activity.xml
@@ -146,7 +146,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/roboto_bold"
-                                android:text="Loyality Point"
+                                android:text="Loyalty Point"
                                 android:textColor="@color/light_black_2"
                                 android:textSize="16sp" />
 
