--- a/app/src/main/res/layout/payment_history_items.xml
+++ b/app/src/main/res/layout/payment_history_items.xml
@@ -97,7 +97,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="11dp"
+            android:layout_marginTop="9dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="8dp"
             android:layout_weight="6"
@@ -144,7 +144,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="12dp"
             android:layout_marginRight="8dp"
             android:layout_weight="2"
             android:gravity="center|top"
@@ -155,7 +155,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
-                android:text="Rs 5000"
+                android:text="₹"
                 android:textColor="@color/light_black_2"
                 android:textSize="12sp" />
 
